# audioPlayer

./: .gitignore  CMakeLists.txt  README.md  albumpictureprovider.cpp  albumpictureprovider.h  artcoverimage.cpp  artcoverimage.h  audioPlayer.pro  audioPlayer.qrc  audiocontroller.cpp  audiocontroller.h  audiofilemodel.cpp  audiofilemodel.h  audioplayer.pro  commandserver.cpp  commandserver.h  devicemodel.h  filteredmodel.cpp  filteredmodel.h  main.cpp  maincontroller.cpp  maincontroller.h  playlistgenerator.pro  resources.qrc
.github/workflows/: build-and-text.yml
resources/dbus/: eu.playview.renaudguezennec.xml  eu.renaudguezennec.xml
resources/documentation/: Doxyfile
src/: CMakeLists.txt  amendtag.cpp  amendtag.h  data.h  edittagbox.cpp  edittagbox.h  gmon.out  importparser.cpp  importparser.h  main.cpp  maincontroller.cpp  maincontroller.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  mediatype.h  pl_databasemanager.cpp  pl_databasemanager.h  pl_defaultaudio.cpp  pl_defaultaudio.h  pl_itemcompare.cpp  pl_itemcompare.h  pl_tableview.cpp  pl_tableview.h  pl_texteditordelegate.cpp  pl_texteditordelegate.h  pl_treeitem.cpp  pl_treeitem.h  pl_treemodel.cpp  pl_treemodel.h  pl_treeview.cpp  pl_treeview.h  player.cpp  player.h  playlist.cpp  playlist.h  playlistgenerator.cpp  playlistgenerator.h  playlistgenerator.qrc  playlistitem.cpp  (+30 more)
src/Style/: Style.pri  manhattanstyle.cpp  manhattanstyle.h  styleanimator.cpp  styleanimator.h  stylehelper.cpp  stylehelper.h
src/command/: cmd_thread.cpp  cmd_thread.h  command.pri  pl_command.cpp  pl_command.h  pl_filenameastitle.cpp  pl_filenameastitle.h  pl_moveselection.cpp  pl_moveselection.h  pl_regexcommand.cpp  pl_regexcommand.h  pl_removecommand.cpp  pl_removecommand.h  pl_removefilecommand.cpp  pl_removefilecommand.h  pl_sortcommand.cpp  pl_sortcommand.h  pl_titlewritingcommand.cpp  pl_titlewritingcommand.h
src/data/: data.pri  media.cpp  media.h  song.cpp  song.h
src/dbus/: dbusServer.cpp  dbusServer.h
src/decorator/: decorator.pri  defaultdecorator.cpp  defaultdecorator.h  itemdecorator.cpp  itemdecorator.h  mp3decorator.cpp  mp3decorator.h  oggdecorator.cpp  oggdecorator.h
src/deleguate/: deleguate.pri  moc_trackdelegate.cxx  trackdelegate.cpp  trackdelegate.h
src/directoryFacade/: directory.cpp  directory.h  directoryFacade.pri  file.cpp  file.h  node.h  pl_directoryfacade.cpp  pl_directoryfacade.h  visitorfinder.cpp  visitorfinder.h  visitornode.cpp  visitornode.h
src/document/: document.pri  pl_cvsdoc.cpp  pl_cvsdoc.h  pl_document.cpp  pl_document.h  pl_documentmodel.cpp  pl_documentmodel.h  pl_htmldoc.cpp  pl_htmldoc.h  pl_impldocmodel.cpp  pl_impldocmodel.h  pl_pdfdoc.cpp  pl_pdfdoc.h  pl_plsdoc.cpp  pl_plsdoc.h  pl_xmldoc.cpp  pl_xmldoc.h
src/factory/: factory.pri  factorymedia.cpp  factorymedia.h  factorymp3.cpp  factorymp3.h  factoryogg.cpp  factoryogg.h  factoryother.cpp  factoryother.h  mediafacade.cpp  mediafacade.h  pl_audiofile.cpp  pl_audiofile.h  pl_mediafile.cpp  pl_mediafile.h  pl_mp3file.cpp  pl_mp3file.h  pl_oggfile.cpp  pl_oggfile.h
src/findingassistant/: findingassistant.ui
src/lib/: CMakeLists.txt  albumpictureprovider.cpp  albumpictureprovider.h  appcontroller.cpp  appcontroller.h  audiocontroller.cpp  audiocontroller.h  audiofilemodel.cpp  audiofilemodel.h  commandserver.cpp  commandserver.h  constants.h  devicemodel.cpp  filteredmodel.cpp  filteredmodel.h  imagedataviewer.cpp  imagedataviewer.h  maincontroller.cpp  maincontroller.h  messagefactory.cpp  messagefactory.h  tagmodel.cpp  tagmodel.h
src/lib/preferences/: preference_data.cpp  preference_data.h  preferences.pri  preferences_Impl.h
src/lib/worker/: CMakeLists.txt  filereaderhelper.cpp  filereaderhelper.h
src/listview/: listview.pri  pl_listmodel.cpp  pl_listmodel.h  pl_listview.cpp  pl_listview.h
src/pixmaps/: arrow-up.xpm
src/plugins/: plugins.pri  songlistplugin.h  songplugin.h  songpluginmanager.cpp  songpluginmanager.h
src/preferences/: preference_data.cpp  preferences.ui  preferences_Impl.cpp
src/regexwizzard/: regexwizzard.cpp  regexwizzard.h  regexwizzard.pri  regexwizzard.ui
src/sortui/: sortui.ui
src/tabapi/: pl_abstractListViewer.h  tabapi.pri
src/tageditor/: tageditordialog.ui
src/tagger/: pl_taggerid3.cpp  pl_taggerid3.h  pl_taggerogg.cpp  pl_taggerogg.h  pl_taglibfile.cpp  pl_taglibfile.h  tagger.pri
src/translations/: playlistgenerator_fr_FR.qm  playlistgenerator_fr_FR.ts
src/wizzardexport/: wizzardexport.cpp  wizzardexport.ui  xmlimport.cpp
srcplugin/: srcplugin.pro
worker/: fakenetworkreceiver.cpp  fakenetworkreceiver.h  filereaderhelper.cpp  filereaderhelper.h
(+55 files in other folders)
